# libhttpio

./: Makefile.am  configure.ac  libhttpio.pc.in
include/: http-connection.h  http-post-parameters.h  http-protocol.h  http-ssl.h  http-util.h  http-websockets.h
src/: http-connection.c  http-post-parameters.c  http-protocol.c  http-ssl.c  http-util.c  http-websockets.c
